--- a/Fantasy/Fantasy.csproj
+++ b/Fantasy/Fantasy.csproj
@@ -11,6 +11,11 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Engine\Drawing\View\**" />
+    <EmbeddedResource Remove="Engine\Drawing\View\**" />
+    <None Remove="Engine\Drawing\View\**" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
   </ItemGroup>
